# NZ_Helper_Sign

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: sign.yml
module/: __init__.py  handler.py  notify.py  parser.py  signer.py  stdio.py  util.py
